fixed current-temp spacing

--- a/src/style.css
+++ b/src/style.css
@@ -24,10 +24,20 @@ body {
   align-items: center;
 }
 .current-temp {
-  font-size: 44px;
+  font-size: 40px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
-#emoji {
-  font-size: 44px;
+#icon {
+  display: flex;
+  align-items: center;
+  width: 80px;
+  height: 80px;
+}
+.weather-app-icon {
+  width: 100%;
+  height: auto;
 }
 .grid-emoji {
   text-align: center;
